package edu.fiuba.algo3.modelo.Comercio;

import edu.fiuba.algo3.modelo.Jugador.Jugador;

public interface Comercio {
    void aplicarSobre(Jugador jugador);
}
